tests/suite/fail/generated/borrow/fail_move_save_data.ny
fn save(x: string) -> void { print(x) }
fn main() {
    let data = "hello"
    save(data)
    print(data) //~ ERROR was moved
}
